供應商CRUD完成

--- a/PrjMiddleProject/Views/Shared/_Layout.cshtml
+++ b/PrjMiddleProject/Views/Shared/_Layout.cshtml
@@ -191,7 +191,7 @@
                     </a>
                     <ul id="ddmenu_7" class="collapse dropdown-nav">
                         <li>
-                            <a href="signin.html">物料</a>
+                            <a asp-controller="StoreSupplier" asp-action="StoreSupplierIndex">供應商</a>
                         </li>
                     </ul>
                 </li>
