基本crud 功能寫完

--- a/PrjMiddleProject/Views/Shared/_Layout.cshtml
+++ b/PrjMiddleProject/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                     </a>
                     <ul id="ddmenu_1" class="collapse show dropdown-nav">
                         <li>
-                            <a href="index.html" class="active">會員明細管理</a>
+                            <a asp-controller="Member" asp-action="List" class="active">會員明細管理</a>
                         </li>
                         @* <li>
                             <a href="index.html">預約記錄管理</a>
