list和新增開發

--- a/PrjMiddleProject/Views/Shared/_Layout.cshtml
+++ b/PrjMiddleProject/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
                     </a>
                     <ul id="ddmenu_4" class="collapse dropdown-nav">
                         <li>
-                            <a href="signin.html">活動明細</a>
+                            <a asp-controller="Event" asp-action="List" class="active">活動明細</a>
                         </li>
                         <li>
                             <a href="signin.html">活動批次</a>
