20250728社群系統暫時完成

--- a/PrjMiddleProject/Views/Shared/_Layout.cshtml
+++ b/PrjMiddleProject/Views/Shared/_Layout.cshtml
@@ -144,11 +144,11 @@
                     </a>
                     <ul id="ddmenu_5" class="collapse dropdown-nav">
                         <li>
-                            <a href="signin.html">文章清單</a>
+                            <a asp-controller="Posts" asp-action="List" class="active">文章清單</a>
                         </li>
-                        <li>
+                        @* <li>
                             <a href="signin.html">檢舉清單</a>
-                        </li>
+                        </li> *@
                     </ul>
                 </li>
                 <li class="nav-item nav-item-has-children">
