類別、商品、訂單管理功能

--- a/PrjMiddleProject/Views/Shared/_Layout.cshtml
+++ b/PrjMiddleProject/Views/Shared/_Layout.cshtml
@@ -166,13 +166,13 @@
                     </a>
                     <ul id="ddmenu_6" class="collapse dropdown-nav">
                         <li>
-                            <a href="signin.html">商品管理</a>
+                            <a asp-controller="ShopProduct" asp-action="List">商品管理</a>
                         </li>
                         <li>
-                            <a href="signin.html">類別管理</a>
+                            <a asp-controller="ShopCategory" asp-action="List">類別管理</a>
                         </li>
                         <li>
-                            <a href="signin.html">訂單管理</a>
+                            <a asp-controller="ShopOrder" asp-action="List">訂單管理</a>
                         </li>
                     </ul>
                 </li>
