--- a/PrjMiddleProject/Views/Member/Create.cshtml
+++ b/PrjMiddleProject/Views/Member/Create.cshtml
@@ -16,31 +16,42 @@
 
 <form asp-action="Create" method="post">
     <div class="mb-3">
-        <label asp-for="Name" class="form-label"></label>
+        <label asp-for="Name" class="form-label">姓名</label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="Account" class="form-label"></label>
-        <input asp-for="Account" class="form-control" />
-        <span asp-validation-for="Account" class="text-danger"></span>
+        <label asp-for="Username" class="form-label">帳號</label>
+        <input asp-for="Username" class="form-control" />
+        <span asp-validation-for="Username" class="text-danger"></span>
+    </div>
+    <div class="mb-3">
+        <label asp-for="Password" class="form-label">密碼</label>
+        <input asp-for="Password" type="password" class="form-control" />
+        <span asp-validation-for="Password" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="IDNumber" class="form-label"></label>
+        <label asp-for="ConfirmPassword" class="form-label">確認密碼</label>
+        <input asp-for="ConfirmPassword" type="password" class="form-control" />
+        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="IDNumber" class="form-label">身分證字號</label>
         <input asp-for="IDNumber" class="form-control" />
         <span asp-validation-for="IDNumber" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="Email" class="form-label"></label>
+        <label asp-for="Email" class="form-label">Email</label>
         <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="Gender" class="form-label"></label>
+        <label asp-for="Gender" class="form-label">性別</label>
         <select asp-for="Gender" class="form-select">
             <option value="">請選擇</option>
             <option value="男">男</option>
@@ -50,7 +61,7 @@
     </div>
 
     <div class="mb-3">
-        <label asp-for="Birthday" class="form-label"></label>
+        <label asp-for="Birthday" class="form-label">生日</label>
         <input asp-for="Birthday" type="date" class="form-control" />
         <span asp-validation-for="Birthday" class="text-danger"></span>
     </div>
