--- a/PrjMiddleProject/Views/Shared/_Layout.cshtml
+++ b/PrjMiddleProject/Views/Shared/_Layout.cshtml
@@ -75,7 +75,8 @@
                     </a>
                     <ul id="ddmenu_2" class="collapse dropdown-nav">
                         <li>
-                            <a href="settings.html">員工基本資料</a>
+                            <a asp-controller="Employee" asp-action="List" class="active">員工基本資料</a>
+                            @* <a href="settings.html">員工基本資料</a> *@
                         </li>
                         <li>
                             <a href="blank-page.html">員工個人管理</a>
